[package]
name = "book-examples"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
edition = "2021"
publish = false
version = "0.0.0"

readme = "README.md"
license = "MIT"

[workspace]
members = [
  "examples/libadwaita"
]

[dev-dependencies]
rand = "0.8.5"
relm4 = "0.7.0"
relm4-components = "0.7.0"
tokio = { version = "1.25", features = ["rt", "macros", "time", "rt-multi-thread", "sync"] }
tracker = "0.2.0"
