[package]
name = "book-examples"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
edition = "2024"
publish = false
version = "0.0.0"
rust-version = "1.92"

readme = "README.md"
license = "MIT"

[workspace]
members = [
  "examples/libadwaita"
]

[dev-dependencies]
rand = "0.8.5"
relm4 = "0.9.1"
relm4-components = "0.9.1"
tokio = { version = "1.41.0", features = ["rt", "macros", "time", "rt-multi-thread", "sync"] }
tracker = "0.2.2"
clap = { version = "4.5.20", features = ["derive"] }
