[package]
name = "book-examples"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
edition = "2024"
publish = false
version = "0.0.0"
rust-version = "1.92"

readme = "README.md"
license = "MIT"

[workspace]
members = [
  "examples/libadwaita"
]

[dev-dependencies]
rand.workspace = true
relm4.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time", "rt-multi-thread", "sync"] }
tracker.workspace = true
clap = { workspace = true, features = ["derive"] }

[workspace.dependencies]
rand = "0.9.2"
relm4 = { git = "https://github.com/Relm4/Relm4.git" }
tokio = { version = "1.48.0", features = ["rt", "macros", "time", "rt-multi-thread", "sync"] }
tracker = "0.2.2"
clap = { version = "4.5.53", features = ["derive"] }
