[package]
name = "libadwaita-examples"
version = "0.0.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.8.5"
relm4 = { version = "0.9.1", features = ["libadwaita"] }

[[example]]
name = "simple_manual"
path = "simple_manual.rs"
